--- a/src/Sketch.WebApp/Sketch.WebApp.csproj
+++ b/src/Sketch.WebApp/Sketch.WebApp.csproj
@@ -17,6 +17,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Sketch.Shared\Sketch.Shared.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Toolbox\" />
+  </ItemGroup>
   
   <Import Project="..\..\common.props" />
   <Import Project="..\..\stylecop.props" />
