Restructure project files

--- a/src/Sketch.WebApp/Sketch.WebApp.csproj
+++ b/src/Sketch.WebApp/Sketch.WebApp.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Toolbox\" />
+    <Folder Include="Areas\Tools\Bucket\Views\" />
   </ItemGroup>
   
   <Import Project="..\..\common.props" />
