--- a/src/Sketch.WebApp/Sketch.WebApp.csproj
+++ b/src/Sketch.WebApp/Sketch.WebApp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <DisableScopedCssBundling>true</DisableScopedCssBundling>
+    <DisableScopedCssBundling>false</DisableScopedCssBundling>
   </PropertyGroup>
 
   <ItemGroup>
