Reset WebServer to default state

--- a/src/Sketch.WebServer/Sketch.WebServer.csproj
+++ b/src/Sketch.WebServer/Sketch.WebServer.csproj
@@ -15,6 +15,12 @@
     <ProjectReference Include="..\Sketch.WebApp\Sketch.WebApp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Hubs\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
   <Import Project="..\..\common.props" />
   <Import Project="..\..\stylecop.props" />
 
