--- a/src/Sketch.Shared/Sketch.Shared.csproj
+++ b/src/Sketch.Shared/Sketch.Shared.csproj
@@ -6,5 +6,10 @@
 
   <Import Project="..\..\common.props" />
   <Import Project="..\..\stylecop.props" />
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
